[tool.poetry]
name = "purple-star-chart"
version = "0.1.0"
description = ""
authors = ["chura <a.r.nakama@gmail.com>"]
readme = "README.md"
packages = [{include = "purple_star_chart"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
lunardate = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
